Update mainnet parameters with one latest lending-v4 blueprint (#30)
* Update Lending v4 mainnet deployment

* Use one latest Lending v4 blueprint

* Correct preview blueprint comment

* Clarify historical fixture provenance